@@ -29,6 +29,7 @@
 	* Added feature #36668: Allow Solr connection initialization per site
 	* Change the page browser content object initialization to be switchable from USER_INT to USER, credits Dimitri Ebert
 	* Fixed an issue where a relative URL could be detected as TypoScript path in LINK viewhelper
+	* Added a button in the admin module to remove all documents of a selected site
 
 2012-07-20  Stefan Sprenger  <stefan.sprenger@dkd.de>
 
